# MANS

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  mans_api.hpp  mans_defs.h
amd/adm/: mapping_uint16.cpp  mapping_uint32.cpp
cpu/: cpu_mans_compress.cpp  cpu_mans_decompress.cpp  file_utils.h  mans_cpu.cpp  mans_cpu.h
cpu/adm/: adm.h  adm_utils.cpp  adm_utils.h  cpuadm_compress.cpp  cpuadm_decompress.cpp  mappingcpu_uint16.cpp  mappingcpu_uint32.cpp
cpu/pans/: CMakeLists.txt  compress.cpp  decompress.cpp  pans_utils.cpp  pans_utils.h
nv/adm/: mapping_uint16.cu  mapping_uint32.cu
nv/ans/: CMakeLists.txt
nv/ans/include/ans/: GpuANSEncode.h
testdata/u2/exafel/: exafel_59200x388_1024kB.u2  exafel_59200x388_16kB.u2  exafel_59200x388_256kB.u2  exafel_59200x388_4kB.u2  exafel_59200x388_64kB.u2
tools/: auto_test_cpu.py  config.sh  dataset_gen.py  run_cr.sh  run_thr_cpu.sh  run_thr_nv.sh
tools/bash_module/: run_test_8bit_huffman.sh  run_test_cr_u2.sh  run_test_cr_u4.sh  run_test_thr_u2_cpu.sh  run_test_thr_u2_nv.sh  run_test_thr_u4_cpu.sh  run_test_thr_u4_nv.sh
tools/output/: U2CR.txt  U2THR.txt  U4CR.txt  U4THR.txt
